# cargo-rig

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  cog.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-approve.yml  ci.yml  commit-check.yml  release.yml
cargo-rig/: Cargo.toml
cargo-rig/src/: main.rs
cargo-rigtest/: Cargo.toml
cargo-rigtest/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/tests/: acceptance.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: lib.rs
examples/calculator/tests/: rig_tests.rs
rig-macros/: Cargo.toml
rig-macros/src/: lib.rs
rig-runtime/: Cargo.toml
rig-runtime/src/: lib.rs  registry.rs  reporter.rs  scheduler.rs
rigtest-macros/: Cargo.toml
rigtest-macros/src/: lib.rs
rigtest-runtime/src/: lib.rs  registry.rs  reporter.rs  scheduler.rs
rigtest/src/: lib.rs
